PhotoDocumentationRepository and OrderRepository